# vim-vpe

./: .gitignore  .gitmodules  .pyre_configuration  .readthedocs.yml  CHANGELOG.rst  Dockerfile  LICENCE  README.rst  cov.ini  mypy.ini  pylintrc  pyproject.toml  requirements.txt  test-requirements.txt
admin/: build-base.dkr  build-release  build-release.py  current.dkr  grok_options.py  mk-base  mk-release.py  recent-changes.txt  release.dkr  requirements.txt  run-vim80-install  run-vim80-tests  sanity-check.py  upload-description.txt  upload-install.txt  vim80-py36.dkr  vpe-install.dkr  vpe-test.dkr
admin/vpe/: README.txt  inst-vpe.vim  install.py
doc/: .gitignore  MymMainfile  vpe-help.rst
docker-files/: .gitignore  apt-sources  demo.vim  install-vim.rc  py-do-config  test-bash.rc  test-vim.rc  vim-do-config
docs/: .gitignore  MymMainfile  conf.py  features.txt  guide-intro.txt  index.rst  inst.txt  intro.txt  plugins.rst  quick-start.txt  reqs.txt  requirements.txt
docs/api/: api.vpe.app_ui_support.rst  api.vpe.argparse.rst  api.vpe.channels.rst  api.vpe.commands.rst  api.vpe.config.rst  api.vpe.core.rst  api.vpe.diffs.rst  api.vpe.mapping.rst  api.vpe.message_bus.rst  api.vpe.panels.rst  api.vpe.rst  api.vpe.syntax.rst  api.vpe.ui.rst  api.vpe.user_commands.rst  api.vpe.windows.rst  api.vpe.wrappers.rst  vpe.commands.rst  vpe.core.rst  vpe.mapping.rst  vpe.rst  vpe.syntax.rst
docs/cs_vimhelp/: __init__.py  latex.py  table.py  vim.py  vim_builder.py  vim_writer.py  visitor.py
docs/guide/: Mymfile  auto-commands.rst  buf-changes.rst  buffers.rst  channels.rst  conf.py  first-steps.rst  index.rst  inst_linux.rst  inst_windows.rst  installation.rst  logging.rst  mapping.rst  plugins.rst  reacting.rst  scratch-buffers.rst  timers.rst  user-commands.rst  windows.rst
docs/guide/api/: api.vpe.app_ui_support.rst  api.vpe.config.rst  api.vpe.rst  api.vpe.syntax.rst  api.vpe.windows.rst  api.vpe.wrappers.rst
examples/: explore.py  vpe_bufnav.py  vpe_filenav.py  vpe_panels.py
src/: .gitignore
src/vpe/: __init__.py  app_ui_support.py  argparse.py  channels.py  colors.py  common.py  config.py  core.py  diffs.py  install.py  mapping.py  message_bus.py  panels.py  rich_support.py  rpy_support.py  rpyc_support.py  syntax.py  ui.py  user_commands.py  utils.py  vim.pyi  vpe_commands.py  windows.py  wrappers.py
src/vpe/minirpyc/: __init__.py
src/vpe/resources/: 000-vpe.vim  vpe-help.txt
src/vpe/vpe_lib/: __init__.py  diffs.py  resources.py
src/vpe_support/: vpe_install.py
src/vpe_support/resources/: 000-vpe.vim
start/vpe/examples/: vpe_bufnav.vim  vpe_filenav.vim
start/vpe/plugin/: vpe.vim
stub/: vim.py
test/: .coveragerc  .gitignore  _fixup_.py  all_tests.py  ci  finish.vim  init.vim  run_tests  support.py  test.vim  test_app_ui_support.py  test_argparse.py  test_buf_listener.py  test_buffers.py  test_channels.py  test_colors.py  test_commands.py  test_config.py  test_extensions.py  test_mapping.py  test_options.py  test_panels.py  test_plugin.py  test_popup.py  test_syntax.py  test_tabpages.py  test_user_commands.py  test_variables.py  test_vim.py  test_windows.py  test_wrapping.py  vim_if.py
test/configs/: pylintrc
test/data-out/: .gitignore
test/test_plugins/: a_hook_provider.py  load_abort.py  load_fail.py  load_ok.py  vpe_test_only_a_hook_provider.py  vpe_test_only_not_a_plugin.py
test/test_plugins/vpe_test_only_non_package/: just_a_py_file.py
test/test_plugins/vpe_test_only_non_plugin_package/: __init__.py
test/vim-scripts/: basic_buffer.py  basic_buffers.py  basic_range.py  basic_tabpage.py  basic_tabpages.py  basic_vim.py  basic_window.py  basic_windows.py  helpers.py
vpe/: __init__.py  app_ui_support.py  buffers.py  channels.py  colors.py  commands.py  common.py  config.py  core.py  core.pyi  core_gen.pyi  current.py  dictionaries.py  map.py  mapping.py  options.py  panels.py  proxies.py  syntax.py  tabpages.py  ui.py  variables.py  vim_types.py  windows.py  wrappers.py
(+11 files in other folders)
